<resources>
    <string name="app_name">TranslationApp</string>
    <string name="source_language">Source Language</string>
    <string name="translation">Translation</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="detect">Detect Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>